# alderguard

./: .gitignore  Basin_tipping_scan.csv  DEPLOY.md  FOLDERS.md  Fig1_schematic.csv  Fig2_RP_contours.csv  Fig3_stability_beta_B.csv  Fig3_stability_cB_beta.csv  Fig3_stability_phi_RB.csv  Fig4_tipping_maxeig_vs_phi.csv  Fig6_control_comparison.csv  Fig7_LHS_PRCC.csv  LICENSE  Manuscript.docx  Manuscript_Revision1.docx  Manuscript_revised_tracked.docx  Manuscript_trackchange.docx  Method.docx  README.md  RUN_SUMMARY.txt  Review_Anurag.docx  Review_Anurag.odt  Review_Anurag.xps  TableX_control_summary.xlsx  apply_revisions.py  baseline_params.json  baseline_params_calibrated.json  baseline_params_initial.json  create_revision_r1c1.py  deep_verify.py  manuscript_extracted.txt  persistence_sweep.csv  revision_r1c1.json  revision_r1c2.json  revision_r1c4.json  revision_r3c1.json  revision_r3c2.json  supplementary_extracted.txt  verify_revisions.py
alder-ipm-sim-py/: INSTALL.md  MANIFEST.in  README.md  pyproject.toml  setup.py  setup_and_run.bat  setup_and_run.sh
alder-ipm-sim-py/alder_ipm_sim/: __init__.py  __main__.py  app.py  cli.py  comparison.py  control.py  fitting.py  model.py  parameters.py  report.py  warnings.py
alder-ipm-sim-py/docs/: user_guide_conservation.md
alder-ipm-sim-py/examples/: demo_control.py  demo_early_warnings.py  demo_fitting.py  demo_full_workflow.py  demo_simulation.py  example_approaching_tipping.csv  example_seasonal_data.csv  example_stable_coexistence.csv  generate_synthetic_data.py
alder-ipm-sim-py/tests/: __init__.py  conftest.py  (+6 more)
(+137 files in other folders)
