[build-system]
requires = ['setuptools>=68.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'alder-ipm-sim'
version = '0.1.0'
description = 'Decision-support toolkit for the Alnus-beetle-parasitoid-bird ecoepidemic system'
readme = 'README.md'
requires-python = '>=3.9'
license = {text = 'MIT'}
authors = [{name = 'Sinchan Ghosh', email = 'gsinchanpostdoc@gmail.com'}]
keywords = ['ecology', 'pest-management', 'regime-shift', 'early-warning', 'ODE', 'forest', 'biocontrol']
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
]
dependencies = [
    'numpy>=1.24',
    'scipy>=1.10',
    'pandas>=2.0',
    'matplotlib>=3.7',
]

[project.optional-dependencies]
app = ['streamlit>=1.30', 'plotly>=5.18']
dev = ['pytest>=7.0', 'pytest-cov']

[project.scripts]
alder-ipm-sim = 'alder-ipm-sim.cli:main'

[project.urls]
Homepage = 'https://github.com/gsinchanpostdoc/alder-ipm-sim'
Repository = 'https://github.com/gsinchanpostdoc/alder-ipm-sim'
WebApp = 'https://gsinchanpostdoc.github.io/alder-ipm-sim/'
Issues = 'https://github.com/gsinchanpostdoc/alder-ipm-sim/issues'

[tool.setuptools.packages.find]
where = ['.']

[tool.setuptools.package-data]
alder-ipm-sim = ['*.json', '*.csv']
